[package]
name = "zk-verifier-test"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.8.2-rust-1.81.0"
image_digest = "sha256:3b5e6efa1d0cef710009f9cc20c845d316187cc170455edc5ba7fdf471c19655"
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = { version = "4.0.0", features = ["legacy"] }
near_groth16_verifier = "=1.0.1"
borsh = "0.9.3"
near-bigint = "1.0.0"
hex = "0.4.3"
base64 = "0.21.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
sha2 = "0.10.0"
serde_json = "1.0"
serde_json_canonicalizer = "0.3.0"

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }
near-workspaces = { version = "0.14.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", rev = "d05fd8e152f8d110b587906e3d854196b086e42a" }